# dotchain

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
docs/: chain.html  dot_chain.html  index.html
src/dotchain/: __init__.py  chain.py  dot_chain.py
tests/dotchain/: test_chain.py
